# NetworkManager-fortisslvpn

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  NetworkManager-fortisslvpn.doap  README  README.md  TODO  autogen.sh  configure.ac  network-manager-fortisslvpn.doap  nm-fortisslvpn-service.conf  nm-fortisslvpn-service.name.in
appdata/: network-manager-fortisslvpn.appdata.xml.in  network-manager-fortisslvpn.metainfo.xml.in
auth-dialog/: Makefile.am  main.c
contrib/: README  antipppd.pl  fortiserve.pl  sslproxy.pl
po/: LINGUAS  Makevars  NetworkManager-fortisslvpn.pot  POTFILES.in  ar.po  as.po  be@latin.po  bg.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kn.po  ko.po  lt.po  lv.po  mk.po  (+24 more)
properties/: Makefile.am  gresource.xml  libnm-vpn-plugin-fortisslvpn-editor.ver  nm-fortisslvpn-dialog.ui  nm-fortisslvpn-editor-plugin.c  nm-fortisslvpn-editor-plugin.h  nm-fortisslvpn-editor.c  nm-fortisslvpn-editor.h  nm-fortisslvpn.c  nm-fortisslvpn.h
shared/: Makefile.am  nm-default.h  nm-fortissl-properties.c  nm-fortissl-properties.h  nm-service-defines.h
shared/nm-utils/: nm-glib.h
src/: Makefile.am  nm-fortisslvpn-pinentry.c  nm-fortisslvpn-pppd-compat.h  nm-fortisslvpn-pppd-plugin.c  nm-fortisslvpn-pppd-service.xml  nm-fortisslvpn-service-defines.h  nm-fortisslvpn-service.c  nm-fortisslvpn-service.h  nm-ppp-status.h
